objects/Advisory_Twitter_Feed__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <inlineHelpText>This field can be used to position twitter records in a specific location in the list.  The list on the site is in ascending order from top to bottom. (ie: the record with position 1 will appear at the top of the list)</inlineHelpText>
        <label>Position</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Twitter_Username__c</fullName>
        <inlineHelpText>If the user’s twitter handle is @RMussle, enter Rmussle in this field.</inlineHelpText>
        <label>Twitter Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Advisory Twitter Feed</label>
    <nameField>
        <label>Advisory Twitter Feed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advisory Twitter Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Twitter_Username_Not_Contain_at_Symbol</fullName>
        <active>true</active>
        <description>Warn the user if they attempt to add a Twitter Username that includes the &quot;@&quot; symbol.</description>
        <errorConditionFormula>CONTAINS(Twitter_Username__c , &apos;@&apos;)</errorConditionFormula>
        <errorDisplayField>Twitter_Username__c</errorDisplayField>
        <errorMessage>Please remove the @ symbol from the Twitter Username.</errorMessage>
    </validationRules>
</CustomObject>